--- a/pom.xml
+++ b/pom.xml
@@ -84,6 +84,19 @@
 			<artifactId>primefaces-extensions</artifactId>
 			<version>4.0.0</version>
 		</dependency>
+		<dependency>
+			<groupId>org.apache.poi</groupId>
+			<artifactId>poi</artifactId>
+			<version>3.10-FINAL</version>
+		</dependency>
+		<dependency>
+			<groupId>com.lowagie</groupId>
+			<artifactId>itext</artifactId>
+			<version>2.1.7</version>
+		</dependency>
+		
+		
+		
 	</dependencies>
 
 	<build>
